2011-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amrecover.8.xml: Add an AUTH section.

2011-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Controller.pm, perl/Amanda/Taper/Protocol.pm,
	  perl/Amanda/Taper/Worker.pm: Remove uneeded '#! @PERL@' first line.

2011-05-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: s/Catched/Caught/

2011-05-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: Trap ctrl-c while backup is running, resume by
	  sending email and log rotation.

2011-05-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Call $device->finish() before
	  $device->read_label(), A device must be in ACCESS_NULL for read_label.

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Do not crash on unterminated quoted string.

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amzfs-sendrecv.pl: Implement restore.
	  Generate index with only '/'.
	* perl/Amanda/Application/Zfs.pm: Add $self->{filesystem} on some
	  command, improve zfs_build_snapshotname.
	* server-src/list_dir.c (add_dir_list_item): Check if same dump.

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/local-security.c: Call initgroups before executing amandad

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Do not count dup to tape when checking space
	  on holdingdisk.

2011-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Do not get "location" if bucket_location is not set.

2011-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Reply immediately a NO_NEW_TAPE if taper ask
	  REQUEST_NEW_TAPE after it is in TAPER_STATE_DONE.

2011-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Device.swg: Do not crash if an unknown device-property
	  is set.

2011-04-26  Jean-Louis Martineau <martineau@zmanda.com>